--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <a href="https://www.instagram.com/OficinaN74Marcenaria">
-        <img src="URL_DA_IMAGEM" alt="Oficina N74 Marcenaria">
+        <img src="20240729_Sem Internet.png" alt="Oficina N74 Marcenaria">
     </a>
 </body>
 </html>
