--- a/2index.html
+++ b/2index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: url:"20240731_pixel_site_2cumaru" repeat; /* Imagem de fundo repetitiva */
+            background: url('20240731_pixel_site_2cumaru.jpg') repeat; /* Imagem de fundo repetitiva */
             text-align: center;
         }
         .container {
