--- a/2index.html
+++ b/2index.html
@@ -9,7 +9,10 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: url('20240731_pixel_site_2cumaru.jpg') repeat; /* Imagem de fundo repetitiva */
+            background-image: url('fundo.jpg'); /* Caminho para a imagem de fundo */
+            background-size: auto; /* Mantém o tamanho original da imagem */
+            background-repeat: repeat; /* Faz a imagem se repetir para preencher o fundo */
+            background-position: top left; /* Inicia a repetição do canto superior esquerdo */
             text-align: center;
         }
         .container {
@@ -30,7 +33,6 @@
     </style>
 </head>
 <body>
-    <!-- Versão da página: index2.html -->
     <div class="container">
         <div class="message">Você será redirecionado para o nosso Instagram em 3 segundos...</div>
         <img src="seu-logotipo.png" alt="Oficina N74 Marcenaria">
