--- a/2index.html
+++ b/2index.html
@@ -9,10 +9,10 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('fundo.jpg'); /* Caminho para a imagem de fundo */
-            background-size: auto; /* Mantém o tamanho original da imagem */
-            background-repeat: repeat; /* Faz a imagem se repetir para preencher o fundo */
-            background-position: top left; /* Inicia a repetição do canto superior esquerdo */
+            background-image: url('fundo3.jpg'); /* Caminho para a imagem de fundo */
+            background-size: cover; /* Ajusta a imagem para cobrir toda a área do fundo */
+            background-repeat: no-repeat; /* Evita a repetição da imagem */
+            background-position: center center; /* Centraliza a imagem no fundo */
             text-align: center;
         }
         .container {
