--- a/2index.html
+++ b/2index.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <div class="message">Você será redirecionado para o nosso Instagram em 3 segundos...</div>
-        <img src="seu-logotipo.png" alt="Oficina N74 Marcenaria">
+        <img src="logo.gif" alt="Oficina N74 Marcenaria">
     </div>
     <script>
         setTimeout(function() {
