--- a/index.html
+++ b/index.html
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oficina N74 Marcenaria</title>
+    <title>Redirecionamento</title>
+    <meta http-equiv="refresh" content="0;url=https://www.instagram.com/OficinaN74Marcenaria/">
     <style>
+        /* O código CSS abaixo garante que não haja estilos aplicados, e a página será invisível para o usuário */
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            cursor: pointer;
+            padding: 0;
+            background: transparent;
         }
     </style>
-    <script>
-        function redirect() {
-            window.location.href = "https://www.instagram.com/OficinaN74Marcenaria";
-        }
-        setTimeout(redirect, 3000); // Redireciona após 3 segundos
-    </script>
 </head>
 <body>
-    <a href="https://www.instagram.com/OficinaN74Marcenaria">
-        <img src="20240729_Sem Internet.png" alt="Oficina N74 Marcenaria">
-    </a>
+    <!-- O corpo da página está vazio porque o redirecionamento é automático -->
 </body>
 </html>
