--- a/2025_grade_CVM7.HTML
+++ b/2025_grade_CVM7.HTML
@@ -80,14 +80,14 @@
         font-weight: bold;
     }
     /* Cores das disciplinas */
-    .ed-fisica { background-color: #87CEFA; }
-    .ingles { background-color: #FFA500; }
-    .ciencias { background-color: #90EE90; }
+    .ed-fisica { background-color: #2A70A3; }
+    .ingles { background-color: #C8955C; }
+    .ciencias { background-color: #759856; }
     .lanche { background-color: #FFFF00; color: #FF0000; }
-    .matematica { background-color: #808080; }
-    .portugues { background-color: #FF0000; }
-    .hist-geo { background-color: #006400; }
-    .musica { background-color: #FF6666; }
+    .matematica { background-color: #B3B2B7; }
+    .portugues { background-color: #B2514A; }
+    .hist-geo { background-color: #0E7E70; }
+    .musica { background-color: #C4716D; }
     .arte { background-color: #FF7F50; }
     @media (max-width: 768px) {
         table, th, td {
@@ -269,3 +269,4 @@ document.addEventListener('contextmenu', function(e) {
 
 </body>
 </html>
+
