--- a/2025_grade_CVM7.HTML
+++ b/2025_grade_CVM7.HTML
@@ -81,11 +81,11 @@
     }
     /* Cores das disciplinas */
     .ed-fisica { background-color: #2A70A3; }
-    .ingles { background-color: #C8955C; }
-    .ciencias { background-color: #759856; }
+    .ingles { background-color: #FF9900; }
+    .ciencias { background-color: #00CC00; }
     .lanche { background-color: #FFFF00; color: #FF0000; }
     .matematica { background-color: #B3B2B7; }
-    .portugues { background-color: #B2514A; }
+    .portugues { background-color: #E60000; }
     .hist-geo { background-color: #0E7E70; }
     .musica { background-color: #C4716D; }
     .arte { background-color: #FF7F50; }
@@ -269,4 +269,5 @@ document.addEventListener('contextmenu', function(e) {
 
 </body>
 </html>
+
 
