--- a/2025_grade_CVM7.HTML
+++ b/2025_grade_CVM7.HTML
@@ -36,7 +36,7 @@
         background-color: #3333ff;
     }
     button.active {
-        font-weight: bold; /* botão ativo fica em negrito */
+        font-weight: bold;
     }
     .table-container {
         overflow-x: auto;
@@ -179,6 +179,10 @@
 </table>
 </div>
 
+<footer style="text-align:center; padding:6px; margin-top:20px;">
+    © copyright
+</footer>
+
 <script>
 const table = document.getElementById('horarioTable');
 const buttons = document.querySelectorAll('#controls button');
@@ -269,5 +273,3 @@ document.addEventListener('contextmenu', function(e) {
 
 </body>
 </html>
-
-
