--- a/2025_grade_CVM7.HTML
+++ b/2025_grade_CVM7.HTML
@@ -99,7 +99,7 @@
 </head>
 <body>
 
-<h1>Horário Ensino Fundamental 1 – 2º Ano B – Tarde 2025</h1>
+<h1>Horário EF1 – 2ºB – Tarde 2025</h1>
 
 <div id="controls">
     <button id="btnFull" onclick="showFullTable()">Mostrar Tabela Completa</button>
@@ -273,3 +273,4 @@ document.addEventListener('contextmenu', function(e) {
 
 </body>
 </html>
+
