--- a/2025_grade_CVM7.HTML
+++ b/2025_grade_CVM7.HTML
@@ -3,273 +3,85 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Horário Ensino Fundamental 1 – 2º Ano B – Tarde 2025</title>
+<title>HORÁRIO EF1 – 2ºB – TARDE 2025</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f5;
-        padding: 20px;
-        margin: 0;
-    }
-    h1 {
-        text-align: center;
-        color: #333;
-        margin-bottom: 20px;
-    }
-    #controls {
-        text-align: center;
-        margin-bottom: 15px;
-    }
-    button {
-        padding: 10px 20px;
-        margin: 5px;
-        font-size: 14px;
-        cursor: pointer;
-        border: none;
-        border-radius: 5px;
-        background-color: #00008B;
-        color: white;
-        transition: background 0.3s;
-        font-weight: normal;
-    }
-    button:hover {
-        background-color: #3333ff;
-    }
-    button.active {
-        font-weight: bold;
-    }
-    .table-container {
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-        text-align: center;
-    }
-    table {
-        min-width: 700px;
-        border-collapse: separate;
-        border-spacing: 0;
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        table-layout: fixed;
-        word-wrap: break-word;
-        width: 100%;
-        margin: 0 auto;
-        transition: all 0.3s ease-in-out;
-    }
-    table.compacto {
-        min-width: unset;
-        width: auto;
-    }
-    th, td {
-        padding: 12px;
-        text-align: center;
-        border: 2px solid white;
-    }
-    th {
-        background-color: #00008B;
-        color: white;
-        font-size: 16px;
-    }
-    td {
-        font-size: 14px;
-        color: white;
-    }
-    td:first-child {
-        background-color: #00008B;
-        color: white;
-        font-weight: bold;
-    }
-    /* Cores das disciplinas */
-    .ed-fisica { background-color: #2A70A3; }
-    .ingles { background-color: #FF9900; }
-    .ciencias { background-color: #00CC00; }
-    .lanche { background-color: #FFFF00; color: #FF0000; }
-    .matematica { background-color: #B3B2B7; }
-    .portugues { background-color: #E60000; }
-    .hist-geo { background-color: #0E7E70; }
-    .musica { background-color: #C4716D; }
-    .arte { background-color: #FF7F50; }
-    @media (max-width: 768px) {
-        table, th, td {
-            font-size: 12px;
-            padding: 8px;
-        }
-    }
+/* ====== ESTILO GERAL ====== */
+body{font-family:Arial,sans-serif;background:#f0f0f5;padding:20px;margin:0;text-transform:uppercase}
+h1{text-align:center;color:#333;margin-bottom:20px}
+/* ====== BOTÕES ====== */
+#controls{text-align:center;margin-bottom:15px}
+button{padding:10px 20px;margin:5px;font-size:14px;cursor:pointer;border:none;border-radius:5px;background:#00008B;color:#fff;transition:all .3s;font-weight:normal;text-transform:uppercase}
+button:hover{background:#3333ff}
+button.active{font-weight:bold;background:#1E90FF}
+/* ====== TABELA ====== */
+.table-container{overflow-x:auto;-webkit-overflow-scrolling:touch;text-align:center}
+table{min-width:700px;border-collapse:separate;border-spacing:0;border-radius:10px;overflow:hidden;box-shadow:0 4px 10px rgba(0,0,0,.1);table-layout:fixed;word-wrap:break-word;width:100%;margin:0 auto;transition:all .3s}
+table.compacto{min-width:unset;width:auto}
+th,td{padding:12px;text-align:center;border:2px solid #fff}
+th{background:#00008B;color:#fff;font-size:16px}
+td{font-size:14px;color:#fff}
+td:first-child{background:#00008B;color:#fff;font-weight:bold}
+/* ====== CORES DAS DISCIPLINAS ====== */
+.ed-fisica{background:#2A70A3}.ingles{background:#FF9900}.ciencias{background:#00CC00}.lanche{background:#FFFF00;color:#FF0000}.matematica{background:#B3B2B7}.portugues{background:#E60000}.hist-geo{background:#0E7E70}.musica{background:#C4716D}.arte{background:#FF7F50}
+@media(max-width:768px){table,th,td{font-size:12px;padding:8px}}
 </style>
 </head>
 <body>
-
-<h1>Horário EF1 – 2ºB – Tarde 2025</h1>
-
+<h1>HORÁRIO EF1 – 2ºB – TARDE 2025</h1>
 <div id="controls">
-    <button id="btnFull" onclick="showFullTable()">SEMANA</button>
-    <button id="btnDay" onclick="showCurrentDay()">HOJE</button>
+<button id="btnFull" onclick="showFullTable()">MOSTRAR TABELA COMPLETA</button>
+<button id="btnDay" onclick="showCurrentDay()">MOSTRAR APENAS O DIA ATUAL</button>
 </div>
-
 <div class="table-container">
 <table id="horarioTable">
-    <thead>
-        <tr>
-            <th>HORÁRIO</th>
-            <th>SEG</th>
-            <th>TER</th>
-            <th>QUA</th>
-            <th>QUI</th>
-            <th>SEX</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>13:10–14:00</td>
-            <td class="ed-fisica">ED. FÍSICA</td>
-            <td class="hist-geo">HIST/GEO</td>
-            <td class="musica">MÚSICA</td>
-            <td class="portugues">PORTUGUÊS</td>
-            <td class="portugues">PORTUGUÊS</td>
-        </tr>
-        <tr>
-            <td>14:00–14:50</td>
-            <td class="ingles">INGLÊS</td>
-            <td class="ingles">INGLÊS</td>
-            <td class="ingles">INGLÊS</td>
-            <td class="ingles">INGLÊS</td>
-            <td class="ingles">INGLÊS</td>
-        </tr>
-        <tr>
-            <td>14:50–15:10</td>
-            <td class="ciencias">CIÊNCIAS</td>
-            <td class="hist-geo">HIST/GEO</td>
-            <td class="ciencias">CIÊNCIAS</td>
-            <td class="portugues">PORTUGUÊS</td>
-            <td class="matematica">MATEMÁTICA</td>
-        </tr>
-        <tr>
-            <td>15:10–15:30</td>
-            <td class="lanche">LANCHE</td>
-            <td class="lanche">LANCHE</td>
-            <td class="lanche">LANCHE</td>
-            <td class="lanche">LANCHE</td>
-            <td class="lanche">LANCHE</td>
-        </tr>
-        <tr>
-            <td>15:30–16:00</td>
-            <td class="ciencias">CIÊNCIAS</td>
-            <td class="hist-geo">HIST/GEO</td>
-            <td class="ciencias">CIÊNCIAS</td>
-            <td class="portugues">PORTUGUÊS</td>
-            <td class="matematica">MATEMÁTICA</td>
-        </tr>
-        <tr>
-            <td>16:00–16:50</td>
-            <td class="matematica">MATEMÁTICA</td>
-            <td class="portugues">PORTUGUÊS</td>
-            <td class="matematica">MATEMÁTICA</td>
-            <td class="hist-geo">HIST/GEO</td>
-            <td class="matematica">MATEMÁTICA</td>
-        </tr>
-        <tr>
-            <td>16:50–17:40</td>
-            <td class="matematica">MATEMÁTICA</td>
-            <td class="portugues">PORTUGUÊS</td>
-            <td class="matematica">MATEMÁTICA</td>
-            <td class="arte">ARTE</td>
-            <td class="ciencias">CIÊNCIAS</td>
-        </tr>
-    </tbody>
+<thead><tr><th>HORÁRIO</th><th>SEG</th><th>TER</th><th>QUA</th><th>QUI</th><th>SEX</th></tr></thead>
+<tbody>
+<tr><td>13:10–14:00</td><td class="ed-fisica">ED. FÍSICA</td><td class="hist-geo">HIST/GEO</td><td class="musica">MÚSICA</td><td class="portugues">PORTUGUÊS</td><td class="portugues">PORTUGUÊS</td></tr>
+<tr><td>14:00–14:50</td><td class="ingles">INGLÊS</td><td class="ingles">INGLÊS</td><td class="ingles">INGLÊS</td><td class="ingles">INGLÊS</td><td class="ingles">INGLÊS</td></tr>
+<tr><td>14:50–15:10</td><td class="ciencias">CIÊNCIAS</td><td class="hist-geo">HIST/GEO</td><td class="ciencias">CIÊNCIAS</td><td class="portugues">PORTUGUÊS</td><td class="matematica">MATEMÁTICA</td></tr>
+<tr><td>15:10–15:30</td><td class="lanche">LANCHE</td><td class="lanche">LANCHE</td><td class="lanche">LANCHE</td><td class="lanche">LANCHE</td><td class="lanche">LANCHE</td></tr>
+<tr><td>15:30–16:00</td><td class="ciencias">CIÊNCIAS</td><td class="hist-geo">HIST/GEO</td><td class="ciencias">CIÊNCIAS</td><td class="portugues">PORTUGUÊS</td><td class="matematica">MATEMÁTICA</td></tr>
+<tr><td>16:00–16:50</td><td class="matematica">MATEMÁTICA</td><td class="portugues">PORTUGUÊS</td><td class="matematica">MATEMÁTICA</td><td class="hist-geo">HIST/GEO</td><td class="matematica">MATEMÁTICA</td></tr>
+<tr><td>16:50–17:40</td><td class="matematica">MATEMÁTICA</td><td class="portugues">PORTUGUÊS</td><td class="matematica">MATEMÁTICA</td><td class="arte">ARTE</td><td class="ciencias">CIÊNCIAS</td></tr>
+</tbody>
 </table>
 </div>
-
-<footer style="text-align:center; padding:6px; margin-top:20px;">
-    © copyright
-</footer>
-
+<footer style="text-align:center;padding:10px;margin-top:20px;">© N74 2025</footer>
 <script>
-const table = document.getElementById('horarioTable');
-const buttons = document.querySelectorAll('#controls button');
-const btnFull = document.getElementById('btnFull');
-const btnDay = document.getElementById('btnDay');
+const table=document.getElementById('horarioTable'),buttons=document.querySelectorAll('#controls button'),btnFull=document.getElementById('btnFull'),btnDay=document.getElementById('btnDay');
 
-function setActive(button) {
-    buttons.forEach(b => b.classList.remove('active'));
-    button.classList.add('active');
+// Ativa botão selecionado
+function setActive(button){buttons.forEach(b=>b.classList.remove('active'));button.classList.add('active')}
+
+// Mostrar tabela completa
+function showFullTable(){
+setActive(btnFull);
+table.classList.remove('compacto');
+table.style.tableLayout='fixed';
+const ths=table.querySelectorAll('thead th'),trs=table.querySelectorAll('tbody tr');
+ths.forEach(th=>{th.style.display='';th.style.width=''});
+trs.forEach(tr=>tr.querySelectorAll('td').forEach(td=>{td.style.display='';td.style.width=''}));
 }
 
-function showFullTable() {
-    setActive(btnFull);
-    table.classList.remove('compacto');
-    table.style.tableLayout = 'fixed';
-
-    const ths = table.querySelectorAll('thead th');
-    const trs = table.querySelectorAll('tbody tr');
-
-    ths.forEach(th => {
-        th.style.display = '';
-        th.style.width = '';
-    });
-    trs.forEach(tr => {
-        tr.querySelectorAll('td').forEach(td => {
-            td.style.display = '';
-            td.style.width = '';
-        });
-    });
+// Mostrar apenas o dia atual
+function showCurrentDay(){
+setActive(btnDay);
+table.classList.add('compacto');
+table.style.tableLayout='auto';
+const ths=table.querySelectorAll('thead th'),trs=table.querySelectorAll('tbody tr');
+const hoje=new Date().getDay(),colIndex=(hoje>=1&&hoje<=5)?hoje:1;
+const btnWidth=buttons[0].offsetWidth+"px";
+// Ajusta cabeçalho
+ths.forEach((th,i)=>{if(i===0||i===colIndex){th.style.display='';th.style.width=btnWidth}else th.style.display='none'});
+// Ajusta células
+trs.forEach(tr=>tr.querySelectorAll('td').forEach((td,i)=>{if(i===0||i===colIndex){td.style.display='';td.style.width=btnWidth}else td.style.display='none'}));
 }
-
-function showCurrentDay() {
-    setActive(btnDay);
-    table.classList.add('compacto');
-    table.style.tableLayout = 'auto';
-
-    const ths = table.querySelectorAll('thead th');
-    const trs = table.querySelectorAll('tbody tr');
-
-    const hoje = new Date().getDay();
-    let colIndex = (hoje >= 1 && hoje <= 5) ? hoje : 1;
-
-    const btnWidth = buttons[0].offsetWidth + "px";
-
-    ths.forEach((th, index) => {
-        if (index === 0 || index === colIndex) {
-            th.style.display = '';
-            th.style.width = btnWidth;
-        } else {
-            th.style.display = 'none';
-        }
-    });
-
-    trs.forEach(tr => {
-        tr.querySelectorAll('td').forEach((td, index) => {
-            if (index === 0 || index === colIndex) {
-                td.style.display = '';
-                td.style.width = btnWidth;
-            } else {
-                td.style.display = 'none';
-            }
-        });
-    });
-}
-
-// Exibir o dia atual ao carregar
 showCurrentDay();
 
-/* ================= Segurança básica ================= */
-// Bloqueia Ctrl+U e inspecionar
-document.addEventListener('keydown', function(e) {
-    if (e.ctrlKey && (e.key === 'u' || e.key === 'U')) {
-        e.preventDefault();
-        alert(''PAUSA PARA O CAFÉ');
-    }
-    if (e.key === 'F12') {
-        e.preventDefault();
-        alert('PAUSA PARA O CAFÉ');
-    }
-});
-
-// Bloqueia clique direito
-document.addEventListener('contextmenu', function(e) {
-    e.preventDefault();
-    alert(''PAUSA PARA O CAFÉ');
-});
+/* ================= SEGURANÇA DIVERTIDA ================= */
+// Bloqueia Ctrl+U, F12 e clique direito
+document.addEventListener('keydown',e=>{if(e.ctrlKey&&(e.key==='u'||e.key==='U')){e.preventDefault();alert('NÃO VAI PERDER A HORA!')}if(e.key==='F12'){e.preventDefault();alert('NÃO VAI PERDER A HORA!')}});
+document.addEventListener('contextmenu',e=>{e.preventDefault();alert('NÃO VAI PERDER A HORA!')});
 </script>
-
 </body>
 </html>
