--- a/CVM2B2025.HTML
+++ b/CVM2B2025.HTML
@@ -107,7 +107,7 @@ footer { text-align:center; margin-top:20px; color:#333; font-size:14px; }
 
 <canvas id="bgCanvas"></canvas>
 
-<h1>HORÁRIO EF1 – 2ºB – TARDE 2025</h1>
+<h1>HORÁRIO EF1 – 2ºB – 2025</h1>
 
 <div id="controls">
     <button id="btnFull" onclick="showFullTable()">Mostrar Tabela Completa</button>
@@ -190,3 +190,4 @@ document.addEventListener('contextmenu',e=>{e.preventDefault();alert('NÃO VAI P
 
 </body>
 </html>
+
